fixing menu being blocked by footer on smaller screens

--- a/css/asset.css
+++ b/css/asset.css
@@ -13,7 +13,7 @@
 	top: 56px;
 	overflow-y: scroll;
 	background: #222;
-    z-index: 9;
+    z-index: 99;
 }
 .for_content_ver {
 	display: block;
